--- a/math.html
+++ b/math.html
@@ -697,7 +697,26 @@
 
 
 
-kjgklsdjj
+        <li><b>Principle of mathematical induction-</b></li>
+        To prove that P(n) is true for all positive integer n, where P(n) is a propositional function, we complete two
+        step:
+        <ol>
+          <li>Basic step-</li>
+          We verify that P(1) is true i.e. result is true for n=1.<br>
+          <li>Inductive step-</li>
+          Showing that the conditional statement P(k) &rightarrow; P(k+1) is true for all positive integer k i.e.,
+          the result will be true for n = k+1 i.e. P(k+1).
+        </ol>
+
+        <b>Q. Show that if n is a positive integer, then 1+2+3+......+n = {n(n+1)}/2<br>
+        Sol-<br></b>
+        Let P(n) = 1+2+3+.......+n = {n(n+1)}/2  ------eq1<br>
+        when n = 1, from LHS of eq1<br>
+        &DoubleRightArrow; P(1) = 1<br>
+        And from RHS of eq1<br>
+        &DoubleRightArrow; P(1) = {1(1+1)}/2 = 1<br>
+        
+
 
 
          
