--- a/os_lab.html
+++ b/os_lab.html
@@ -105,9 +105,15 @@
       <div>
         <section>
           <center><h1>OS Lab</h1></center>
+          <b>Q. A program to simulate the FCFS CPU scheduling algorithm</b><br>
+          <img src="img/Opreting System/fsfc" alt="fsfc" width="500px"><br>
+          <b>Output-</b><br>
+          <img src="img/Opreting System/fsfc_output" alt="fsfc_output" width="500px"><br><br>
+          <b>Q. A program to simulate the SJF CPU scheduling algorithm</b><br>
+          <img src="img/Opreting System/sjf" alt="sjf" width="500px"><br>
+          <b>Output-</b><br>
+          <img src="img/Opreting System/sjf_output" alt="sjf_output" width="500px"><br><br>
 
-
-         
 
 </body>
 </html>
