--- a/os_lab.html
+++ b/os_lab.html
@@ -109,10 +109,16 @@
           <img src="img/Opreting System/fsfc.png" alt="fsfc" width="500px"><br>
           <b>Output-</b><br>
           <img src="img/Opreting System/fsfc_output.png" alt="fsfc_output" width="500px"><br><br>
+
           <b>Q. A program to simulate the SJF CPU scheduling algorithm</b><br>
           <img src="img/Opreting System/sjf.png" alt="sjf" width="500px"><br>
           <b>Output-</b><br>
           <img src="img/Opreting System/sjf_output.png" alt="sjf_output" width="500px"><br><br>
+          
+          <b>Q. To simulate the CPU scheduling algorithm round-robin.</b><br>
+          <img src="img/Opreting System/roundrobin.png" alt="round-robin" width="500px"><br>
+          <b>Output-</b><br>
+          <img src="img/Opreting System/roundrobin_output.png" alt="roundrobin_output" width="500px"><br><br>
 
 
 </body>
