--- a/os_lab.html
+++ b/os_lab.html
@@ -111,9 +111,9 @@
           <img src="img/Opreting System/fcfs1output.png" alt="fsfc_output" width="500px"><br><br>
 
           <b>Q. A program to simulate the SJF CPU scheduling algorithm</b><br>
-          <img src="img/Opreting System/sjf1.png" alt="sjf" width="500px"><br>
+          <img src="img/Opreting System/sjf1output.png" alt="sjf" width="500px"><br>
           <b>Output-</b><br>
-          <img src="img/Opreting System/sjf1output.png" alt="sjf_output" width="500px"><br><br>
+          <img src="img/Opreting System/sjf1.png" alt="sjf_output" width="500px"><br><br>
           
           <b>Q. To simulate the CPU scheduling algorithm round-robin.</b><br>
           <img src="img/Opreting System/roundrobin.png" alt="round-robin" width="500px"><br>
