--- a/web_tech_lab.html
+++ b/web_tech_lab.html
@@ -103,6 +103,22 @@
         <section>
           <center><h1>Web Technologies Lab</h1></center>
 
+          <h4> Q1:- Create your Biodata using HTML and css?</h4> 
+        <img id="img1" src="img/WT lab/1.questions .jpg"> <br>
+        <img id="img1"  src="img/WT lab/1.2quation.jpg"><br>
+        <h5>Output:</h5>
+        <img id="img1"  src="img/WT lab/1.output .jpg"><br><br><br>
+
+        <h4> Q2:- Create a program using HTML and CSS That illustrate the application of css through inline internal and extrnal style on a web page ? </h4> 
+        <img id="img1" src="img/WT lab/2.que.jpg"> <br>
+        <img id="img1"  src="img/WT lab/2.qua.jpg"><br>
+        <h5>Output:</h5>
+        <img id="img1"  src="img/WT lab/2.output .jpg"><br><br><br>
+
+
+        
+
+
 
          
 
