--- a/web_tech.html
+++ b/web_tech.html
@@ -111,11 +111,24 @@
       <li>The HTTP client receive the response containing information and process it.</li>
 
     </ol>
-    <b>WWW</b> - The world wide web is an application that run the internet and its application.
-    <br>
-    There are several types of browsers such as nextstep navigator, mozilla, firefox, internet exprorer are the
-    hyperlink through world wide web.
-    <br><br>There are five layer exist in TCP/IP :
+    
+
+  </ol>
+  <b>Web technologies</b> Www is an application that runs the internet and it’s applications. There are several types
+  of browsers such as Mozilla Firefox, internet explorer, Google Chrome are the hyperlink through www.
+  <br>
+  <b>TCP/IP ( Transmission control protocol)/(Internet protocol) <br>5 layers
+  </b>
+  <ol type="1">
+    <li>Physical layer</li>
+    <li>link layer</li>
+    <li>Internet layer </li>
+    <li>Transport layer</li>
+    <li>Application layer</li>
+  </ol>
+
+
+
     <ol type="1">
       <li><b>Physical Layer - </b> This layer deals with the hardware connectivity, voltage, etc..</li>
       <li><b>Data Link Layer - </b> It is also very similar to the other network model. This cover mac ( media access
@@ -132,34 +145,8 @@
     </ol>
 
 
-    </ol>
-    <b>Web technologies</b> Www is an application that runs the internet and it’s applications. There are several types
-    of browsers such as Mozilla Firefox, internet explorer, Google Chrome are the hyperlink through www.
-    <br>
-    <b>TCP/IP ( Transmission control protocol)/(Internet protocol) <br>5 layers
-    </b>
-    <ol type="1">
-      <li>Physical layer</li>
-      <li>link layer</li>
-      <li>Internet layer </li>
-      <li>Transport layer</li>
-      <li>Application layer</li>
-    </ol>
-
-    <ol type="1">
-      <li><b>Data link layer :- </b>It is also very similar to the other network models. This covers MAC (Media access
-        control),that is, who can send the data when needed. It also deals with frame format .</li>
-      <li><b>Internet layer :- </b>It is very important from the context of communication over an internet. This layer
-        concerns with the format of datagram as defined in internet protocol (IP) and also about the mechanism of
-        forwarding the datagram from source computer to final destination via one or more router.</li>
-      <li><b>Transport layer :- </b>There are two main protocols in this layer. TCP and UDP. TCP ensures that
-        communication between the sender and receiver is reliable, error free and in sequence, however UDP doesn’t offer
-        reliability. Hence , TCP is a connection oriented protocol. UDP is a connection less protocol.</li>
-      <li><b>Application layer :- </b>It allows an end user to run the various applications on the internet and use the
-        internet in the different ways. These applications are :- FTP(file transfer protocol), SMTP(simple main transfer
-        protocol),TFTP,HTTP.</li>
-
-    </ol>
+   
+   
 
 
 
@@ -237,13 +224,56 @@
     
 </xmp>
 <ol type=None>
-  <li><img src="img\webtech\img (4).jpg" alt="" srcset="" id="img1"></li>
-  <li><img src="img\webtech\img (2).jpg" alt="" srcset="" id="img1"></li>
-  
-<li><img src="img\webtech\img (3).jpg" alt="" srcset="" id="img1"></li>
-<li><img src="img\webtech\img (1).jpg" alt="" srcset="" id="img1"></li>
+  <li><img src="img/webtech/dif_html_xml.jpg" alt="" srcset="" id="img1"></li>
+</ol>
 
 
+<h2>Steps for Web Designing</h2>
+<ol>
+    <li>Goal identification</li>
+    <li>Scope definition</li>
+    <li>Site creation</li>
+    <li>Content creation</li>
+    <li>Visual elements</li>
+    <li>Testing</li>
+    <li>Launch</li>
+</ol>
+
+<p><strong>1. Goal identification:</strong> Where we work with the client to determine what goals the new website needs to fulfill, that is, what is its purpose?</p>
+<p><strong>2. Scope definition:</strong> Once we know the site’s goal, we can define the scope of the project, that is, what web pages and features the site requires to fulfill the goals.</p>
+<p><strong>3. Site creation:</strong> With the scope well defined, we can start digging into the site map, defining how the contents and features appear. We define the scope definition with intermediate.</p>
+<p><strong>4. Content creation:</strong> Now that we have a bigger picture of the site in mind, we can start content creation for individual pages and keep the page’s focus on a single topic.</p>
+<p><strong>5. Visual elements:</strong> With the site architecture and a few contents in place, we can start working on visual ways.</p>
+<p><strong>6. Testing:</strong> We have got all our pages and defined how they are displayed to the site visitor so as to make sure that it all works.</p>
+<p><strong>7. Launch:</strong> Once everything is working successfully, it’s time to plan and execute our website launch.</p>
+
+<h2>IP Addresses and their Classes</h2>
+<p>Internet protocol in the TCP/IP protocol should assign a new address called IP Address, to each device participating in a computer network. An IP Address serves basically host network interfaces and the location address.</p>
+<p>IPv4 = 32 bits address<br>
+IPv6 = 128 bits address<br>
+But due to tremendous network growth in the internet, a new system is used that is IPv6.</p>
+<p>IP Address is usually written using four decimal numbers. Each represents 8 bits in the range 0-255.<br>
+Ex: 203.197.107.107</p>
+
+<h3>Classes of IP Address</h3>
+<ol>
+    <li>Class A: 0-127</li>
+    <li>Class B: 128-191</li>
+    <li>Class C: 192-223</li>
+    <li>Class D: 224-239</li>
+    <li>Class E: 240-255</li>
+</ol>
+
+<h2>DNS server (Domain Name System Servers)</h2>
+<p>DNS servers or Domain Name System servers allow us to interact with devices on the internet without actually remembering the string of the number. Each computer on the internet has a unique address called as IP address, which is similar to the address required for sending a direct mail.</p>
+<p>107.218.10.33 is an IP Address consisting of four decimal numbers in the range 0-255.</p>
+
+<h3>Purpose of DNS</h3>
+<ol>
+    <li>DNS helps with the resolving of domain name to IP Addresses.</li>
+    <li>It identifies and locates different hosts on the internet such that they can communicate successfully.</li>
+    <li>DNS is used for routing services.</li>
+    <li>It is used for the verification of hosts, emails, and services.</li>
 </ol>
  
 
