--- a/os_lab.html
+++ b/os_lab.html
@@ -119,7 +119,10 @@
           <img src="img/Opreting System/roundrobin.png" alt="round-robin" width="500px"><br>
           <b>Output-</b><br>
           <img src="img/Opreting System/roundrobin_output.png" alt="roundrobin_output" width="500px"><br><br>
-
-
+          <b>Q. To simulate Banker's algorithm</b>
+          <img src="img/os1_code.png" alt="round-robin" width="500px"><br><br><br>
+          <img src="img/os2_code.png" alt="round-robin" width="500px"><br>
+          <b>Output-</b><br>
+          <img src="img/os4_output.png" alt="round-robin" width="500px"><br>
 </body>
 </html>
