--- a/archi.html
+++ b/archi.html
@@ -345,6 +345,6 @@
         <li><strong>Stack Instructions:</strong> Manipulate the stack, including pushing and popping values. (e.g., PUSH, POP)</li>
         <li><strong>Bit Manipulation Instructions:</strong> Perform operations at the bit level such as shifting and rotating. (e.g., SHIFT, ROTATE)</li>
     </ol>
-
-<img src="img/.png" alt="hgf" width="300px"></body>
+    
+</body>
 </html>
