--- a/math.html
+++ b/math.html
@@ -791,8 +791,8 @@
         P(k+1) = (k+1)k(k+2) <br>
         P(k+1) = (k<sup>2</sup>+k)(k+2) <br>
         P(k+1) = k<sup>3</sup> + 3k<sup>2</sup> +2k<br>
-        P(k+1) = k<sup>3</sup> -k + k 3k<sup>2</sup> +2k<br>
-        P(k+1) = k<sup>3</sup> -k 3k<sup>2</sup> +3k<br>
+        P(k+1) = k<sup>3</sup> -k + k + 3k<sup>2</sup> +2k<br>
+        P(k+1) = k<sup>3</sup> -k + 3k<sup>2</sup> +3k<br>
         P(k+1) = k<sup>3</sup> -k + 3(k<sup>2</sup> +k)<br>
         Since, k<sup>3</sup> - k is divisible by  3 and 3(k<sup>2</sup> +k) is also divisible by 3<br>
         &there4; P(k+1) is divisible by 3<br>
