--- a/archi_lab.html
+++ b/archi_lab.html
@@ -327,7 +327,7 @@ BIOS is typically placed in a chip known as Read Only Memory(ROM) that comes wit
 As the BIOS will interface the hardware with the operating system, it will require configurations of the hardware components like hard disk, monitor, etc. This information is permanently saved in an area known as Complementary Metal Oxide Semiconductor Random Access Memory (CMOS RAM). Power is supplied to the CMOS from a small battery so its contents will not be lost after the PC is turned off. Therefore, there is a battery and a small RAM memory on the board which stores information in a permanent manner. The CMOS needs very little power so there is not much of strain on the computer’s battery. Even then the battery is rechargeable is recharged every time the computer is turned on.
 <br><br>
 <center><h1>EXPERIMENT NO-4</h1></center>
-<b><centre><h1>To study Motherboard</h1></centre>
+<centre><h1>To study Motherboard</h1></centre>
  <b> Aim:-To study motherboard.</b><br>
   <b>Motherboard:</b> The main circuit board of a microcomputer. The motherboard contains the connectors for attaching additiona l boards. Typically, the motherboard contains the CPU, BIOS, memory, mass storage interfaces, serial and parallel ports, expansion slots, and all the controllers
   required to control standard peripheral devices, such as the display screen, keyboard, and disk drive. Collectively, all these chips that re side on the motherboard are known as the motherboard's chipset.
