--- a/math.html
+++ b/math.html
@@ -972,6 +972,59 @@
              a<sub>n</sub> = 2+(n-1)(3) is solution of given recurrence relation. 
         </ol>
         
+        Eg- <b>There are in guests at a sesquicentennial hall. Each person shakes hand with everybody else exactly once. Define the number of handshakes that occur recursively.<br>
+
+        Let H<sub>n</sub> denote the number of handshakes that occur. Clearly, H<sub>1</sub>=0,so let n&GreaterEqual;2 Let us consider one of the guests, Saurabh. By definition, the number of handshakes made by the remaining (n-1) guests among themselves k<sub>n-1</sub> Now guest, Saurabh shakes hands with n-1 guests, yielding n-1 additional handshakes. Hence,<br> H<sub>n</sub> = H<sub>n-1</sub> + (n-1), n&GreaterEqual;2 and H<sub>1</sub>=0<br>
+      Sol-</b><br>
+      Solving this recurrence relation by substitution method.<br>
+       H<sub>n</sub> = H<sub>n-1</sub>+(n-1)<br>
+       Using iterative substitutions we get,<br>
+       H<sub>n</sub> = H<sub>n-2</sub> + (n-2)+(n-1) <br>
+       H<sub>n</sub> = H<sub>n-3</sub> + (n-3)+(n-2)+(n-1)<br>
+       after i substitution we get,<br>
+       H<sub>n</sub>=H<sub>n-i</sub> + (n-i)+(n-i-1)+...+(n-3)+(n-2)+(n-1).<br>
+       when i=n-1 we get,<br>
+       H<sub>n</sub> = H<sub>1</sub>+1+2+3+...+(n-2)+(n-1) <br>
+       H<sub>n</sub> = 0+1+2+3+...+(n-2)+(n-1)<br>
+       H<sub>n</sub> = {n(n-1)}/2<br>
+       let us prove this by induction.<br>
+       Let us show that<br>
+       H<sub>n</sub> = {n(n-1)}/2 ,where n&GreaterEqual;1<br>
+       Basis step: n=1<br>
+       H<sub>1</sub> = 1(0)/2 = 0<br>
+       which agrees with initial condition. Hence formula is true for n=1. <br>
+       Induction step: Let us assume that the formula is true for n=k,<br>
+       i.e. H<sub>k</sub> = {k(k-1)}/{2} , for any k&GreaterEqual;1<br>
+       Then by recurrence for<br>
+       H<sub>k+1</sub> = H<sub>k</sub> + k<br>
+       let us substitute<br>
+       H<sub>k</sub> = k(k-1)/2<br>
+       we get,<br>
+       H<sub>k+1</sub> = {k(k-1)/2} + k <br>
+       H<sub>k+1</sub> = {k(k-1)+2k}/2<br>
+       H<sub>k+1</sub> = {k<sup>2</sup>-k+2k}/2<br>
+       H<sub>k+1</sub> = {k<sup>2</sup>+k}/2<br>
+       H<sub>k+1</sub> = {k(k+1)}/2 <br>
+      Hence,result is also true for n=k+1.<br>
+      Thus by mathematical induction, the result is true for n.<br>
+      i.e.  H<sub>n</sub> = n(n-1)/2<br><br>
+
+      <b>Q. Solve the recurrence relation <br>
+         T<sub>n</sub>=(n/2) for n&GreaterEqual;2<br>
+         T(n)=1 for n= 1<br>
+        Also n is in the power of 2.<br>
+      Sol-</b><br>
+      Let us solve the recurrence relation using substitution method<br>
+      T<sub>n</sub> = (n/2)<br>
+      T<sub>n</sub> = T(n/2 x 2) = T(n/2<sup>2</sup>) <br>
+      T<sub>n</sub>=(n/2<sup>3</sup>)<br>
+      After i<sup>th</sup> substitution,<br>
+      T(n) = T(n/2<sup>i</sup>)<br>
+      When i = k, we get 2<sup>k</sup> = n and T(n/n) = T(1)=1 by initial conditions.<br>
+      Hence if 2<sup>k</sup> = n, after k<sup>th</sup> substitutions T(n) reduces to T(1).<br>
+      Hence k=log<sub>2</sub>n and the solution of recurrence is <br>
+      T(n)=log<sub>2</sub>n
+
 
 
         
