--- a/archi_lab.html
+++ b/archi_lab.html
@@ -363,8 +363,8 @@ permanently attached.<br><br>
 
 <b>13. Power supply plug in:</b> The Power supply, as its name implies, provides the necessary electrical power to make the pc operate. The power supply takes standard 110-V AC power and converts into +/-12-Volt, +/-5-Volt, and 3.3-Volt DC power.
 The power supply connector has 20-pins, and the connector can go in only one direction.<br><br>
-<center><h1>EXPERIMENT NO-5</h1></center>
-<b><center><h1>Study of Printer</h1></center></b><br>
+<b><center><h1>EXPERIMENT NO-5</h1></center></b>
+<b><center><h>study of Printer</h></center></b><br> 
 <b>What is a printer?</b><br>
 A printer is a device that accepts text and graphic output from a computer and transfers the information to paper, usually to standard-size, 8.5" by 11" sheets of paper. Printers vary in size, speed, sophistication and cost. In general, more expensive printers are used for more frequent printing or high-resolution color printing.<br><br>
 Personal computer printers can be distinguished as impact or non-impact printers. Early impact printers worked something like an automatic typewriter, with a key striking an inked impression on paper for each printed character. The dot matrix printer, an impact printer that strikes the paper a line at a time, was a popular low-cost option.<br><br>
@@ -378,7 +378,36 @@ There are many different printer manufacturers available today, including Canon,
 •	All-in-one printers are multifunction devices that combine printing with other technologies such as a copier, scanner and/or fax machine.<br>
 •	LED printers are similar to laser printers but use a light-emitting diode array in the print head instead of a laser.<br>
 •	Photo printers are similar to inkjet printers but are designed specifically to print high-quality photos, which require a lot of ink and special paper to ensure the ink doesn't smear.<br>     
+b><center><h1>EXPERIMENT NO-6</h1></center></b>
+<b><center><h>To study SMPS</h></center></b><br>          
+<b>Aim:- To study SMPS<b></b><br> 
+<b>SMPS<b></b>
+A Switched-mode power supply (also Switching-mode power supply, SMPS, or simply Switcher) is an electronic Power Supply Unit (PSU) that incorporates a switching regulator in order to provide the required output voltage. An SMPS is actually a power converter that transmits power from a source (e.g., a battery or the electrical power grid) to a load (e.g., a personal computer) with ideally no loss. The function of the converter is to provide a reliable output voltage often at a different level than the input voltage.<br>
+<img src="img/SMPS.png"id="img1"><br>
+Below A - input EMI filtering<br>
+A - Bridge rectifier<br>
+B - Input filter capacitors<br>
+Between B and C - Primary side heat sink<br>
+C - Transformer<br>
+Between C and D - Secondary side heat sink<br>
+D - Output filter coil<br>
+E - Output filter capacitors<br>
+The coil and large yellow capacitor below E are additional input filtering components that are mounted directly on the power input connector and are not part of the main circuit board.<br>
 
+<b>Classification<b></b><br>
+SMPS can be classified into four types according to the input and output waveforms:<br>
+• AC in, DC out: rectifier, off-line converter input stage<br>
+• DC in, DC out: voltage converter, or current converter, or DC to DC converter<br>
+• AC in, AC out: frequency changer, cycloconverter, transformer<br>
+• DC in, AC out: inverter<br>
+<b>Applications:<b></b><br>
+Switched-mode PSUs in domestic products such as personal computers often have universal inputs, meaning that they can accept power from most mains supplies throughout the world, with rated frequencies from 50 Hz to 60 Hz and voltages from 100 V to 240 V (although a manual voltage range switch may be required). In practice they will operate from a much wider frequency range and often from a DC supply as well. In 2006, at an Intel Developers Forum, Google engineers proposed the use of a single 12 V supply inside PCs, due to the high efficiency of switch mode supplies directly on the PCB.<br>
+<img src="img/switch.png"id="img1"><br>
+
+<b>SMPS Connectors:<b></b><br>
+• Amphenol connector gives power supply to Mother Board<br>
+• Mole x gives power supply to IDE drives<br>
+• Mini Molex gives power supply to floppy drive.<br>
 
 
          
