--- a/dbms.html
+++ b/dbms.html
@@ -8,6 +8,11 @@
 </head>
 <link rel="stylesheet" type="text/css" href="style.css?v=2" />
 <script src="script.js"></script>
+<script>
+    function redirect(){
+        window.location.href = "outofservice.html";
+      }
+</script>
 <script
 	src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
 	integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -83,7 +88,7 @@
         
    }
 </script>
-<body onload="onloading()">  
+<body onload="redirect();" >  
     <script>
        
 
