--- a/login.html
+++ b/login.html
@@ -18,10 +18,11 @@
 
         .container {
             background-color: #fff;
-            padding: 20px;
+            margin: 20px;
+            padding: 10px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 80%;
+            width: 60%;
             max-width: 400px;
         }
 
