--- a/dbms.html
+++ b/dbms.html
@@ -57,8 +57,8 @@ if (cookieValue === "active") {
     }
 } else {
     // Redirect to the login page
-    //window.location.href = "login.html";
-    newuser();
+    window.location.href = "login.html";
+    
 }
 function newuser(){
     
