--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Login Page</title>
     <style>
         body {
+            margin-top: 100px;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
