--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
         <h2>Login</h2>
         <form id="loginForm">
             <div class="form-group">
-                <label for="username">Username:</label>
+                <label for="username">Name:</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
