--- a/dbms.html
+++ b/dbms.html
@@ -226,7 +226,7 @@ if (cookieValue === "active") {
       
 <div id="body">
    <div id="watermark">@Debuggers</div>
-   <center><div id="wishing_part"></div></center>
+   <center><div id="wishing_part">Welcome</div></center>
    <hr>
  <!-- <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a> -->
     <!-- <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a> -->
