--- a/dbms.html
+++ b/dbms.html
@@ -432,7 +432,7 @@ if (!invis) {
             if (n[0] === "name") {
                 // Set values in the form
                 document.getElementById("user").value = n[1];
-                wishme(n[1])
+                wishme(n[1]);
                 userset = true;
                 break;
             }
