--- a/dbms.html
+++ b/dbms.html
@@ -141,7 +141,7 @@ if (cookieValue === "active") {
         
    }
 </script>
-<body onload="redirect();" >  
+<body >  
     <script>
        
 
@@ -402,7 +402,7 @@ if (!invis) {
 }
 </script> -->
 <script>
-    document.addEventListener('DOMContentLoaded', function () {debugger;
+    document.addEventListener('DOMContentLoaded', function () {
         var currentDate = new Date();
 
         // Display current date and time
@@ -429,7 +429,7 @@ if (!invis) {
             var n = cookies[i].trim().split("=");
 
             // Check if cookie name is "name"
-            if (n[0] === "name") {
+            if (n[0] === "name") {debugger;
                 // Set values in the form
                 document.getElementById("user").value = n[1];
                 wishme(n[1]);
