--- a/dbms.html
+++ b/dbms.html
@@ -9,8 +9,7 @@
 <link rel="stylesheet" type="text/css" href="style.css?v=2" />
 <script src="script.js"></script>
 <script>
-    function wishme(name){
-        document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ name+"</b>";}
+    
  // Function to retrieve the value of a cookie by its name
 function getCookie(cookieName) {
     const cookies = document.cookie.split(';');
@@ -31,8 +30,9 @@ var cookieValue = getCookie('user');
 if (cookieValue === "active") {
     // Retrieve the username from the cookie
     const username = getCookie('username');
+    document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ username+"</b>";
     if (username) {debugger;
-        wishme(username);
+        
         // Prepare the data to be sent to the API
         const data = { username: username };
 
