--- a/dbms.html
+++ b/dbms.html
@@ -409,7 +409,7 @@ if (cookieValue === "active") {debugger;
         var submitButton = document.getElementById('subme');
         submitButton.click();
     });
-    var username = getCookie(username);
+    var username = getCookie("username");
     wishme(username);
     function wishme(username){
         document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ username+"</b>";
