--- a/dbms.html
+++ b/dbms.html
@@ -197,6 +197,7 @@ if (cookieValue === "active") {debugger;
                     <li><a class="nav-link dropdown-item" href="startup.html">Startup</a></li>   
                 </ul>
                 <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
+                <li><a class="nav-link dropdown-item" href="Admin.html"><center>Admin Portal</center></a></li>
                 </ul>
               </li>
             </ul>
