--- a/startup.html
+++ b/startup.html
@@ -74,7 +74,8 @@
                 <li><a class="nav-link dropdown-item" href="startup.html">Startup</a></li>   
             </ul>
             <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
-            </ul>
+            <li><a class="nav-link dropdown-item" href="Admin.html"><center>Admin Portal</center></a></li>  
+          </ul>
           </li>
         </ul>
       </div>
