--- a/dbms.html
+++ b/dbms.html
@@ -27,7 +27,7 @@ function getCookie(cookieName) {
 var cookieValue = getCookie('user');
 
 // If the cookie value is "active", continue, else redirect to the login page
-if (cookieValue === "active") {debugger;
+if (cookieValue === "active") {
     // Retrieve the username from the cookie
     const username = getCookie('username');
     
