--- a/all_users.html
+++ b/all_users.html
@@ -85,8 +85,8 @@
     </div>
   </header>
   <style>
-    table {
-        width: 100%;
+    #user-table {
+        width: 95%;
         border-collapse: collapse;
     }
 
@@ -103,7 +103,7 @@
 </head>
 <body>
 
-<h2>User Data</h2>
+<center><h2>User Data</h2></center>
 
 <table id="user-table">
     <thead>
