--- a/all_users.html
+++ b/all_users.html
@@ -86,8 +86,9 @@
   </header>
   <style>
     #user-table {
-        margin: 10px;
-        width: 80%;
+       /* margin: 10px; 
+        width: 80%;*/
+        width: 100%;
         border-collapse: collapse;
       
     }
