--- a/all_users.html
+++ b/all_users.html
@@ -129,7 +129,7 @@
     
     <script>
         // Fetch JSON data using AJAX
-        fetch('https://arambhsoftech.com/alluser_helpdesk.php')
+        fetch('https://arambhsoftech.com/Helpdesk/alluser_helpdesk.php')
         .then(response => response.json())
         .then(data => {
             // Get the table body element
