--- a/dbms.html
+++ b/dbms.html
@@ -38,7 +38,7 @@ if (cookieValue === "active") {
         const data = { username: username };
 
         // Send the data to the API endpoint
-        fetch('https://arambhsoftech.com/Helpdesk_login.php?username=' + encodeURIComponent(username), {
+        fetch('https://arambhsoftech.com/Helpdesk/Helpdesk_login.php?username=' + encodeURIComponent(username), {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
