--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@
             var username = document.getElementById('username').value;
         
             // Constructing the URL with username parameter
-            var apiUrl = 'https://arambhsoftech.com/helpdesk.php?username=' + encodeURIComponent(username);
+            var apiUrl = 'https://arambhsoftech.com/Helpdesk/helpdesk.php?username=' + encodeURIComponent(username);
         
             // Constructing the request object
             var request = new XMLHttpRequest();
