--- a/dbms.html
+++ b/dbms.html
@@ -214,8 +214,9 @@ if (cookieValue === "active") {
     <!-- <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a> -->
 <!-- </marquee> -->
 
-<!-- <a href="sanskrit.html">Sanskrit Important</a>&nbsp;<a href="mech_mcq.html">Assignment Questions DAA</a> -->
-<!-- <hr> -->
+<a href="python_notes.html">Python Viva Important</a>&nbsp;
+<!-- <a href="mech_mcq.html">Assignment Questions DAA</a>  -->
+<!-- <hr>
  
 <body>
     <center><h1>Database Managment Systems Viva Questions</h1></center>
