--- a/web_tech.html
+++ b/web_tech.html
@@ -209,21 +209,21 @@
  
  
  <b>HTML commands</b>
- <xmp>    <html>: beginning and end of an HTML document.
-    <head>: header information of the document.
-    <title>: specifies the title of the page.
-    <body>: contains the main content.
-    <h1> to <h6>: define headings of different sizes.
-    <p>: This tag defines a paragraph of text.
-    <a>: creates a hyperlink.
-    <img>: inserts an image into the page.
-    <ul>: create an unordered list.
-    <ol>: create an ordered list.
-    <br>: inserts a single line break
-    <hr>: the element is displayed as a horizontal rule that is used to separate content.
+ <xmp>    <html></xmp>: beginning and end of an HTML document.
+  <xmp> <header>: </xmp> header information of the document.
+  <xmp><title>:</xmp> specifies the title of the page.
+  <xmp><body>: </xmp>contains the main content.
+  <xmp><h1> to <h6>: </xmp>define headings of different sizes.
+  <xmp> <p>: </xmp>This tag defines a paragraph of text.
+  <xmp> <a>: </xmp>creates a hyperlink.
+  <xmp> <img>: </xmp>inserts an image into the page.
+  <xmp> <ul>: </xmp>create an unordered list.
+  <xmp> <ol>: </xmp>create an ordered list.
+  <xmp> <br>: </xmp>inserts a single line break
+  <xmp> <hr>: </xmp>the element is displayed as a horizontal rule that is used to separate content.
     
     
-</xmp>
+
 <ol type=None>
   <li><img src="img/webtech/dif_html_xml.jpg" alt="" srcset="" id="img1"></li>
 </ol>
