--- a/all_user_in_time.html
+++ b/all_user_in_time.html
@@ -107,9 +107,9 @@
 <body>
 
     <div class="container">
-        <center><h2>User Data</h2></center>
+        <center><h2>Login Data</h2></center>
     
-       <center> <div>Total Users: <span id="total-users"></span></div></center>
+       <center> <div>Total Logins: <span id="total-users"></span></div></center>
     
         <center>
             <table id="user-table">
