--- a/web_tech.html
+++ b/web_tech.html
@@ -96,7 +96,8 @@
 
   <div id="body">
     <div id="watermark">@Debuggers</div>
-
+    
+    <a href="Quizes/web_tech_quiz.html">Web Technology Quiz</a><hr>
     <center>
       <h1>Web Technology</h1>
     </center>
